force-app/main/default/objects/Capital_Improvement__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this be excluded from planning for the following fiscal year?</inlineHelpText>
        <label>Exclude from Budget Planning?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Select the category that this Capital Improvement falls under. If it does not fit into any of the existing values, contact your Salesforce Administrator to discuss changing this list.</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trail</fullName>
                </value>
                <value>
                    <fullName>Road and/or Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Bridge or Pier</fullName>
                </value>
                <value>
                    <fullName>Fence and/or Gate</fullName>
                </value>
                <value>
                    <fullName>Irrigation System</fullName>
                </value>
                <value>
                    <fullName>Residence</fullName>
                </value>
                <value>
                    <fullName>Other Building</fullName>
                </value>
                <value>
                    <fullName>Well Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <inlineHelpText>The condition of the capital improvement when this record was most recently reviewed.</inlineHelpText>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs repair</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Good condition</fullName>
                </value>
                <value>
                    <fullName>Non-operational</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_to_Repair__c</fullName>
        <inlineHelpText>Estimate of the cost to repair this improvement and restore it to &apos;Good Condition&apos;</inlineHelpText>
        <label>Est Cost to Repair</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Additional notes about the Capital Improvement.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Funds_Spent17__c</fullName>
        <inlineHelpText>An estimate of the funds used to maintain this capital improvement in fiscal year 2017.</inlineHelpText>
        <label>Est Funds Spent FY17</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Funds_Spent_FY18__c</fullName>
        <inlineHelpText>An estimate of the funds used to maintain this capital improvement in fiscal year 2018.</inlineHelpText>
        <label>Est Funds Spent FY18</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The specific property that this Capital Improvement is on.</inlineHelpText>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Capital Improvements</relationshipLabel>
        <relationshipName>Capital_Improvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_Unit__c</fullName>
        <inlineHelpText>The Property Management Unit that this Capital Improvement is in.</inlineHelpText>
        <label>Property Management Unit</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Capital Improvements</relationshipLabel>
        <relationshipName>Capital_Improvements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Capital Improvement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property_Management_Unit__c</columns>
        <columns>Property_Interest__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Condition__c</columns>
        <columns>Cost_to_Repair__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Capital Improvement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capital Improvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>